@@ -1,3 +1,9 @@
+Wed May 26 12:08:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* random.c (random_rand): subtraction method of non-numeric can
+	  return Float, and add the result of random to the beginning of
+	  range, not the opposite.  [ruby-dev:41410]
+
 Wed May 26 10:35:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (rb_cv_large_fd_select): needed on mingw, even
